--- a/timer.html
+++ b/timer.html
@@ -9,7 +9,7 @@
 <body>
     <div class="ui inverted fixed menu">
 
-        <div class="header item">Tutoriel</div>
+        <div class="header item">Tutoriel instance</div>
     </div>
 
     <div class="ui main container" id="app">
@@ -19,6 +19,8 @@
            <p> {{ seconds }} </p>
              
         </div>
+
+        <a href="index.html">Retour à la page principal</a>
 
 </div>
 
