--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VueJS</title>
+    
     <script src="js/app.js" defer></script>
 </head>
 <body>
@@ -59,7 +60,8 @@
     
         <button @click="addPerson">Ajouter une personne</button>
         <!-- <button @click="addPerson">Ajouter une personne</button> -->
-    <br><a href="timer.html">Timer</a>
+    <br><a href="timer.html">Lecon 2 timer</a>
+    <br><a href="lecon3.html">Lecon 3 peopeiétés combienées & watchers</a>
     </div>
 
 
